<resources>
    <string name="app_name">NoteZZ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">data</string>
    <string name="date">date</string>
    <string name="details_date">1 Ocak 10.05</string>
    <string name="character">| 0 karakter</string>
    <string name="add_note">ekle</string>
    <string name="save_note">kaydet</string>
    <string name="project_name">NoteZZ</string>
    <string name="delete">Sil</string>
    <string name="cancel_bottom_sheet">İptal</string>
    <string name="permission">Galeriye gidebilmeniz için izin vermeniz gereklidir.</string>
    <string name="give_permission">İzin ver</string>
    <string name="search">Search</string>
    <string name="voice_to_speech">voice to speech</string>
    <string name="folder_name">Klasör Adı</string>
    <string name="add_folder_name">Klasör adı giriniz.</string>
    <string name="add">Ekle</string>
    <string name="folder_name_requested">Lütfen geçerli bir klasör adı giriniz.</string>
</resources>