<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vM"
            type="com.sadikahmetozdemir.notezz.ui.details.NotesDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.details.NotesDetailFragment">

        <androidx.appcompat.widget.Toolbar

            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginBottom="@dimen/margin_15"
            android:background="@color/search_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <TextView
                android:id="@+id/toolbar_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name"
                android:fontFamily="@font/abril_fatface"
                android:layout_gravity="center"
                android:textSize="@dimen/text_size_33"
                />
        </androidx.appcompat.widget.Toolbar>



        <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:text="@string/details_date"
            android:textSize="@dimen/text_size_18"
            app:fontFamily="@font/advent_pro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginBottom="@dimen/margin_8"
            tools:src="@drawable/ic_launcher_background"
            app:layout_constraintBottom_toTopOf="@id/bt_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            android:layout_marginEnd="@dimen/margin_8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@null"
            android:focusable="true"
            android:gravity="top"
            android:padding="@dimen/padding_10"
            android:text="@={vM.notes.data}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:fontFamily="@font/advent_pro"
            app:layout_constraintBottom_toTopOf="@id/bt_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_save"
            style="@style/PrimaryButtonLarge.NoteZZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:onClick="@{()->vM.saveOnClick()}"
            android:text="@string/save_note"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>